rust/macros/tests/ui/fail/authority_linear_choice_divergence.stderr
error: Choreography parse error:
       Syntax error: linear binding 'receipt' diverges across choice branches
         --> input:1:1
           |
         1 | protocol TransferFlow =
             ^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
  --> tests/ui/fail/authority_linear_choice_divergence.rs:4:1
   |
 4 | / tell! {
 5 | |     protocol TransferFlow =
 6 | |       roles Coordinator, Worker
 7 | |       let receipt = transfer Session from Coordinator to Worker
...  |
13 | |             Coordinator -> Worker : Abort
14 | | }
   | |_^
   |
   = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
